successfully trained a resnet model for digit classification

--- a/sudoku_number_classifier.ipynb
+++ b/sudoku_number_classifier.ipynb
@@ -9,9 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T00:25:45.098976Z",
+     "start_time": "2024-05-18T00:25:43.740243Z"
+    }
+   },
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
@@ -24,12 +27,21 @@
     "\n",
     "from python_helper_functions import parse_dat, get_sudoku_dataset\n",
     "from NumberModel import NumberModel, fit"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T00:22:29.350300Z",
+     "start_time": "2024-05-18T00:22:29.339687Z"
+    }
+   },
+   "source": [
+    "print(parse_dat('./warped_dataset/image1082.dat'))"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -47,28 +59,31 @@
      ]
     }
    ],
-   "source": [
-    "print(parse_dat('./warped_dataset/image1082.dat'))"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T00:22:30.075793Z",
+     "start_time": "2024-05-18T00:22:29.351002Z"
+    }
+   },
    "source": [
     "warped_path = \"./warped_dataset/\"\n",
     "cell_path = \"./cell_dataset/\"\n",
     "all_filenames = os.listdir(warped_path)\n",
-    "warped_jpg_filenames = sorted([filename for filename in all_filenames if re.search(r\"\\.jpg\", filename)])\n",
-    "warped_dat_filenames = sorted([filename for filename in all_filenames if re.search(r\"\\.dat\", filename)])\n",
+    "warped_jpg_filenames = sorted([filename for filename in all_filenames if re.search(r\"\\.jpg\", filename)]) # holds jpg images\n",
+    "warped_dat_filenames = sorted([filename for filename in all_filenames if re.search(r\"\\.dat\", filename)]) # holds label information\n",
     "\n",
     "folder_counter = np.zeros(10, dtype=np.int32)\n",
     "for i in range(len(warped_dat_filenames)):\n",
+    "    # get full path and convert image to grayscale\n",
     "    curr_dat = warped_path + warped_dat_filenames[i]\n",
     "    curr_jpg = warped_path + warped_jpg_filenames[i]\n",
     "    full_img = cv2.imread(curr_jpg, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
+    "    # parse the image into a 9x9 grid and append the cells\n",
     "    cells = []\n",
     "    step_x = full_img.shape[1] // 9\n",
     "    step_y = full_img.shape[0] // 9\n",
@@ -77,8 +92,10 @@
     "            curr_cell = copy(full_img[m*step_y: (m+1)*step_y, n*step_x: (n+1)*step_x])\n",
     "            cells.append(curr_cell)\n",
     "\n",
+    "    # parse the .dat file to get the corresponding labels for each cell in the image\n",
     "    labels = parse_dat(curr_dat).flatten()\n",
     "\n",
+    "    # write to the cell_dataset directory and organize every cell image by its label\n",
     "    for k, label in enumerate(labels):\n",
     "        label_path = cell_path + str(label) + \"/\"\n",
     "        if not os.path.exists(label_path):\n",
@@ -87,12 +104,23 @@
     "        sub_image = cells[k]\n",
     "        cv2.imwrite(label_path + str(folder_counter[label]) + \".jpg\", sub_image)\n",
     "        folder_counter[label] += 1"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T00:29:29.874927Z",
+     "start_time": "2024-05-18T00:25:46.896588Z"
+    }
+   },
+   "source": [
+    "# load the sudoku dataset from the cell_dataset directory and fit the Neural Network on this dataset\n",
+    "train_data, test_data, single_image_dimension = get_sudoku_dataset()\n",
+    "losses, NetObject = fit(train_data, test_data, single_image_dimension, 20, 50)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -100,26 +128,107 @@
      "text": [
       "Shape labels: torch.Size([11502]), dtype: torch.int32\n",
       "Shape all_images: torch.Size([11502, 1, 50, 50]), dtype: torch.float32\n",
-      "Epoch 0"
+      "Epoch 4Unexpected exception formatting exception. Falling back to standard exception\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "only integer tensors of a single element can be converted to an index",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m train_data, test_data, single_image_dimension \u001b[38;5;241m=\u001b[39m get_sudoku_dataset()\n\u001b[0;32m----> 2\u001b[0m losses, NetObject \u001b[38;5;241m=\u001b[39m \u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msingle_image_dimension\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m50\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/PersonalProjects/SudokuSolver/NumberModel.py:87\u001b[0m, in \u001b[0;36mfit\u001b[0;34m(train_dataset, test_dataset, image_dim, epochs, batch_size)\u001b[0m\n\u001b[1;32m     85\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m batch \u001b[38;5;129;01min\u001b[39;00m train_loader:\n\u001b[1;32m     86\u001b[0m         batch_x, batch_y \u001b[38;5;241m=\u001b[39m batch\n\u001b[0;32m---> 87\u001b[0m         epoch_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m NetObject\u001b[38;5;241m.\u001b[39mstep(\u001b[43mbatch\u001b[49m\u001b[43m[\u001b[49m\u001b[43mbatch_x\u001b[49m\u001b[43m]\u001b[49m, batch[batch_y])\n\u001b[1;32m     88\u001b[0m     epoch_loss \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(train_loader)\n\u001b[1;32m     90\u001b[0m \u001b[38;5;66;03m# Set the model to evaluation mode\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: only integer tensors of a single element can be converted to an index"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/tmp/ipykernel_32381/3180408849.py\", line 3, in <module>\n",
+      "    losses, NetObject = fit(train_data, test_data, single_image_dimension, 20, 50)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/Documents/PersonalProjects/SudokuSolver/NumberModel.py\", line 182, in fit\n",
+      "    for batch in train_loader:\n",
+      "                      ^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/Documents/PersonalProjects/SudokuSolver/NumberModel.py\", line 134, in step\n",
+      "  File \"/home/jorgejc2/Documents/PersonalProjects/SudokuSolver/NumberModel.py\", line 116, in forward\n",
+      "    x = self.layer2(x)\n",
+      "        ^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/torch/nn/modules/module.py\", line 1532, in _wrapped_call_impl\n",
+      "    return self._call_impl(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/torch/nn/modules/module.py\", line 1541, in _call_impl\n",
+      "    return forward_call(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/torch/nn/modules/container.py\", line 217, in forward\n",
+      "    input = module(input)\n",
+      "            ^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/torch/nn/modules/module.py\", line 1532, in _wrapped_call_impl\n",
+      "    return self._call_impl(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/torch/nn/modules/module.py\", line 1541, in _call_impl\n",
+      "    return forward_call(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/Documents/PersonalProjects/SudokuSolver/NumberModel.py\", line 31, in forward\n",
+      "    out = self.relu(out)\n",
+      "          ^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/torch/nn/modules/module.py\", line 1532, in _wrapped_call_impl\n",
+      "    return self._call_impl(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/torch/nn/modules/module.py\", line 1541, in _call_impl\n",
+      "    return forward_call(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/torch/nn/modules/conv.py\", line 460, in forward\n",
+      "    return self._conv_forward(input, self.weight, self.bias)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/torch/nn/modules/conv.py\", line 456, in _conv_forward\n",
+      "    return F.conv2d(input, weight, bias, self.stride,\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 2144, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/stack_data/core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "           ^^^^^\n",
+      "  File \"/home/jorgejc2/anaconda3/envs/SudokuSolverProject/lib/python3.11/site-packages/executing/executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
      ]
     }
    ],
-   "source": [
-    "train_data, test_data, single_image_dimension = get_sudoku_dataset()\n",
-    "losses, NetObject = fit(train_data, test_data, single_image_dimension, 20, 50)"
-   ]
+   "execution_count": 2
   }
  ],
  "metadata": {
